yaml files added

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'value'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "ConfigBox({'key': 'value', 'key1': 'value1'})"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "'value'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "'44'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "8"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,6 +136,33 @@
    "source": [
     "get_product(x = 2, y = 4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ensure import ensure_annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@ensure_annotations\n",
+    "def get_product(x: int, y: int) -> int:\n",
+    "    return x * y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
