--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "from transformers import TrainingArguments, Trainer\n",
+    "from transformers import TrainingArguments, Trainer # type: ignore\n",
     "from transformers import DataCollatorForSeq2Seq\n",
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
     "from datasets import load_dataset, load_from_disk\n",
